--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -82,25 +82,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 20, done.\u001b[K\n",
-      "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
-      "remote: Total 20 (delta 15), reused 20 (delta 15), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (20/20), 271.08 KiB | 2.32 MiB/s, done.\n",
+      "remote: Enumerating objects: 5, done.\u001b[K\n",
+      "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+      "remote: Total 3 (delta 2), reused 2 (delta 1), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (3/3), 275 bytes | 275.00 KiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   ca2d5a89..bc70d4d0  main       -> origin/main\n",
-      "Updating ca2d5a89..bc70d4d0\n",
+      "   c056c467..f08259fc  main       -> origin/main\n",
+      "Updating c056c467..f08259fc\n",
       "Fast-forward\n",
-      " Notebooks/sh_em_1qm_loop.ipynb | 3478 \u001b[32m++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m--\u001b[m\n",
-      " my_code/pytorch_model.py       |    7 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " 2 files changed, 3340 insertions(+), 145 deletions(-)\n"
+      " checkpoints/0830/models/0830-sh_em_1qm_loop_4.pth  |  Bin \u001b[31m2139\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " checkpoints/0830/models/0830-sh_em_1qm_loop_5.pth  |  Bin \u001b[31m2203\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../plots/0830-sh_em_1qm_loop_losses_batches_4.png |  Bin \u001b[31m14970\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../plots/0830-sh_em_1qm_loop_losses_batches_5.png |  Bin \u001b[31m16336\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../plots/0830-sh_em_1qm_loop_losses_epochs_4.png  |  Bin \u001b[31m10252\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../plots/0830-sh_em_1qm_loop_losses_epochs_5.png  |  Bin \u001b[31m9518\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " ...0-sh_em_1qm_loop_losses_epochs_validation_4.png |  Bin \u001b[31m9581\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " ...0-sh_em_1qm_loop_losses_epochs_validation_5.png |  Bin \u001b[31m11662\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../plots/0830-sh_em_1qm_loop_validation_4.png     |  Bin \u001b[31m47328\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../plots/0830-sh_em_1qm_loop_validation_5.png     |  Bin \u001b[31m50576\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " .../txts/0830-sh_em_1qm_loop_losses_batches_4.txt  | 3102 \u001b[31m--------------------\u001b[m\n",
+      " .../txts/0830-sh_em_1qm_loop_losses_batches_5.txt  | 3102 \u001b[31m--------------------\u001b[m\n",
+      " .../txts/0830-sh_em_1qm_loop_losses_epochs_4.txt   |   12 \u001b[31m-\u001b[m\n",
+      " .../txts/0830-sh_em_1qm_loop_losses_epochs_5.txt   |   12 \u001b[31m-\u001b[m\n",
+      " ...0-sh_em_1qm_loop_losses_epochs_validation_4.txt |   12 \u001b[31m-\u001b[m\n",
+      " ...0-sh_em_1qm_loop_losses_epochs_validation_5.txt |   12 \u001b[31m-\u001b[m\n",
+      " .../0830/txts/0830-sh_em_1qm_loop_model_str_4.txt  |   39 \u001b[31m-\u001b[m\n",
+      " .../0830/txts/0830-sh_em_1qm_loop_model_str_5.txt  |   39 \u001b[31m-\u001b[m\n",
+      " .../0830/txts/0830-sh_em_1qm_loop_validation_4.txt | 1002 \u001b[31m-------\u001b[m\n",
+      " .../0830/txts/0830-sh_em_1qm_loop_validation_5.txt | 1002 \u001b[31m-------\u001b[m\n",
+      " 20 files changed, 8334 deletions(-)\n",
+      " delete mode 100644 checkpoints/0830/models/0830-sh_em_1qm_loop_4.pth\n",
+      " delete mode 100644 checkpoints/0830/models/0830-sh_em_1qm_loop_5.pth\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_losses_batches_4.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_losses_batches_5.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_losses_epochs_4.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_losses_epochs_5.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_losses_epochs_validation_4.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_losses_epochs_validation_5.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_validation_4.png\n",
+      " delete mode 100644 checkpoints/0830/plots/0830-sh_em_1qm_loop_validation_5.png\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_losses_batches_4.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_losses_batches_5.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_losses_epochs_4.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_losses_epochs_5.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_losses_epochs_validation_4.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_losses_epochs_validation_5.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_model_str_4.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_model_str_5.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_validation_4.txt\n",
+      " delete mode 100644 checkpoints/0830/txts/0830-sh_em_1qm_loop_validation_5.txt\n"
      ]
     }
    ],
@@ -111,17 +149,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "nothing to commit, working tree clean\n"
+      "[main 408232b4] data trained model\n",
+      " 81 files changed, 33053 insertions(+), 1 deletion(-)\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_10.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_11.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_12.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_13.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_14.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_15.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_8.pth\n",
+      " create mode 100644 checkpoints/0830/models/0830-mh_em_1qm_loop_9.pth\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_10.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_11.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_12.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_13.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_14.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_15.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_8.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_batches_9.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_10.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_11.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_12.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_13.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_14.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_15.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_8.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_9.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_10.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_11.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_12.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_13.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_14.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_15.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_8.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_losses_epochs_validation_9.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_10.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_11.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_12.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_13.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_14.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_15.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_8.png\n",
+      " create mode 100644 checkpoints/0830/plots/0830-mh_em_1qm_loop_validation_9.png\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_10.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_11.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_12.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_13.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_14.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_15.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_8.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_batches_9.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_10.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_11.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_12.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_13.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_14.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_15.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_8.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_9.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_10.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_11.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_12.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_13.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_14.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_15.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_8.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_losses_epochs_validation_9.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_10.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_11.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_12.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_13.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_14.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_15.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_8.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_model_str_9.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_10.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_11.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_12.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_13.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_14.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_15.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_8.txt\n",
+      " create mode 100644 checkpoints/0830/txts/0830-mh_em_1qm_loop_validation_9.txt\n",
+      "Enumerating objects: 97, done.\n",
+      "Counting objects: 100% (97/97), done.\n",
+      "Delta compression using up to 24 threads\n",
+      "Compressing objects: 100% (88/88), done.\n",
+      "Writing objects: 100% (89/89), 1.11 MiB | 12.89 MiB/s, done.\n",
+      "Total 89 (delta 18), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (18/18), completed with 6 local objects.\u001b[K\n",
+      "To github.com:raulconchello/peptide-QML.git\n",
+      "   778cb793..408232b4  main -> main\n"
      ]
     }
    ],
