--- a/Notebooks/generate_data.ipynb
+++ b/Notebooks/generate_data.ipynb
@@ -2,12 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_path = 'peptide-QML/'\n",
+    "# initial_path = '../'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
+   "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append(initial_path)\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,37 +35,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.generate_random_data_from_energies(\n",
-    "    file_single_path='../data/Scores/PET/data/bb14/SingleEnergy.txt', \n",
-    "    file_pair_path='../data/Scores/PET/data/bb14/PairwiseEnergy.txt', \n",
-    "    file_out_path='../data/Scores/PET/generated/bb14_Strings_Energies_40_000_12_aa.txt', \n",
-    "    n_samples=40000, \n",
-    "    n_amino_acids=12\n",
-    ")"
+    "n_samples = 10000\n",
+    "n_amino_acids = [4, 6, 8, 10, 12]\n",
+    "only_single_energies = False\n",
+    "\n",
+    "for n_aa in n_amino_acids:\n",
+    "    f.generate_random_data_from_energies(\n",
+    "        file_single_path     = initial_path+'data/Scores/PET/data/bb14/SingleEnergy.txt', \n",
+    "        file_pair_path       = initial_path+'data/Scores/PET/data/bb14/PairwiseEnergy.txt', \n",
+    "        file_out_path        = initial_path+'data/Scores/PET/generated/bb14_Strings_Energies{}_{}_000_{}_aa.txt'.format('_Single' if only_single_energies else '', n_samples//1000, n_aa),\n",
+    "        n_samples            = n_samples, \n",
+    "        n_amino_acids        = n_aa,\n",
+    "        only_single_energies = only_single_energies,\n",
+    "    )"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PennyLane",
+   "display_name": "JL_Pennylane",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "name": "jl_pennylane"
   },
   "orig_nbformat": 4
  },
