--- a/Notebooks/loop_Xh_em_1qm_.ipynb
+++ b/Notebooks/loop_Xh_em_1qm_.ipynb
@@ -12,32 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "day = \"0830\"\n",
-    "name_notebook = day + \"-mh_em_1qm_loop.ipynb\"\n",
-    "\n",
-    "#ask the user if that is correct, if he says yes kkep going, otherwise stop\n",
-    "import sys\n",
-    "answer = input(\"{} is the name of the notebook | Is that correct? (y/n): \".format(name_notebook))\n",
-    "if answer != \"y\":\n",
-    "    print(\"Please, change the name of the notebook\")\n",
-    "    sys.exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -51,6 +25,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import sys\n",
     "sys.path.append(initial_path)\n",
     "\n",
@@ -63,76 +38,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file_path = initial_path + 'data/Scores/PET/generated/bb14_Strings_Energies_10_000_8_aa.txt'  # Replace with the actual path to your 'data.txt' file\n",
-    "string_list, number_list = f.read_data_file(data_file_path)\n",
-    "score_list = np.array(number_list)/1000\n",
-    "vector_list = np.array([f.string_to_numbers(string) for string in string_list]) # one hot encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, Y, X_validation, Y_validation = f.create_validating_set(vector_list, score_list, percentage=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the dataset\n",
-    "input_data = ptm.torch.tensor(X) \n",
-    "target_data = ptm.torch.tensor(Y).view(-1, 1)\n",
-    "\n",
-    "# Define the validation set\n",
-    "input_validation = ptm.torch.tensor(X_validation)\n",
-    "target_validation = ptm.torch.tensor(Y_validation).view(-1, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([9000, 8]),\n",
-       " torch.Size([9000, 1]),\n",
-       " torch.Size([1000, 8]),\n",
-       " torch.Size([1000, 1]))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_data.shape, target_data.shape, input_validation.shape, target_validation.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training"
+    "\n"
    ]
   },
   {
@@ -640,100 +551,131 @@
     }
    ],
    "source": [
-    "for iii in range(5):\n",
+    "for num in [4, 6, 8, 10, 12]:\n",
+    "    print(\"## --- Num: \", num, \" --- ##\")\n",
+    "    print(\"\")\n",
+    "    print(\"\")\n",
     "\n",
-    "    for block_n_layers in range(1, 21):\n",
-    "        print(iii, \" # ------- block_n_layers: \", block_n_layers, \" ------- #\")\n",
-    "        print(\"\")\n",
-    "        print(\"\")\n",
+    "    # -- NAME NOTEBOOK -- #\n",
+    "    day = \"0831\"\n",
+    "    name_notebook = day + \"-{}h_em_1qm_loop.ipynb\".format(num)\n",
     "\n",
-    "        # -- QUANTUM NODE -- #\n",
+    "    # -- DATA -- #\n",
+    "    data_file_path_1 = initial_path + 'data/Scores/PET/generated/bb14_Strings_Energies_10_000_{}_aa.txt'.format(num)  \n",
+    "    data_file_path_2 = initial_path + 'data/Scores/PET/generated/bb14_Strings_Energies_Single_10_000_{}_aa.txt'.format(num)\n",
     "\n",
-    "        n_aminoacids = len(string_list[0])\n",
+    "    for data_file_path in [data_file_path_1, data_file_path_2]:\n",
     "\n",
-    "        quantum_layer = qn.circuit(\n",
-    "            n_qubits = n_aminoacids, \n",
-    "            device = \"default.qubit.torch\",\n",
-    "            device_options = {'shots': None},\n",
-    "            embedding = qn.parts.AngleEmbedding, \n",
-    "            # embedding_ansatz = qn.parts.Ansatz_11,\n",
-    "            block_ansatz = qn.parts.Ansatz_11,\n",
-    "            final_ansatz = qn.parts.Ansatz_final_11,\n",
-    "            measurement = qn.parts.Measurement('Z', (n_aminoacids-1)//2),\n",
-    "            # embedding_n_layers = 4,\n",
-    "            # different_inputs_per_layer = True,\n",
-    "            block_n_layers = block_n_layers,\n",
-    "            # wrapper_qlayer = pw.QLayerEmpty,\n",
-    "        )\n",
+    "        string_list, number_list = f.read_data_file(data_file_path)\n",
+    "        score_list = np.array(number_list)/1000\n",
+    "        vector_list = np.array([f.string_to_numbers(string) for string in string_list]) \n",
     "\n",
-    "        # -- HYBRID MODEL -- #\n",
-    "        input_dim = input_data.size(1)\n",
+    "        X, Y, X_validation, Y_validation = f.create_validating_set(vector_list, score_list, percentage=0.1)\n",
     "\n",
-    "        n_pre_classical_layers = 4\n",
-    "        layers_dim = np.linspace(n_aminoacids, input_dim, 4).astype(int)\n",
+    "        # Define the dataset\n",
+    "        input_data = ptm.torch.tensor(X) \n",
+    "        target_data = ptm.torch.tensor(Y).view(-1, 1)\n",
     "\n",
-    "        import torch.nn as nn\n",
-    "        import torch\n",
-    "            \n",
-    "        class Reshape(nn.Module):\n",
-    "            def __init__(self):\n",
-    "                super(Reshape, self).__init__()\n",
-    "\n",
-    "            def forward(self, x):\n",
-    "                dims = len(x.shape)\n",
-    "                return torch.transpose(x, dims-2, dims-1).reshape(x.shape[-3] if dims==3 else 1, x.shape[-2]*x.shape[-1]).squeeze()\n",
-    "\n",
-    "        layers =  [ptm.nn.Embedding(num_embeddings=19, embedding_dim=quantum_layer.input_shape[0]//n_aminoacids), Reshape()]\n",
-    "        layers += [quantum_layer(), ptm.nn.Linear(1,1)]\n",
-    "\n",
-    "        # Create model and set data:\n",
-    "        model = ptm.pytorch_model(\n",
-    "            layers,    \n",
-    "            save_options = {'initial_path': initial_path, 'name_notebook': name_notebook},\n",
-    "        )\n",
-    "        model.set_data(\n",
-    "            data_X=input_data, \n",
-    "            data_Y=target_data, \n",
-    "            data_X_validation=input_validation,\n",
-    "            data_Y_validation=target_validation\n",
-    "        )\n",
-    "        model.keep_track_params=False\n",
+    "        # Define the validation set\n",
+    "        input_validation = ptm.torch.tensor(X_validation)\n",
+    "        target_validation = ptm.torch.tensor(Y_validation).view(-1, 1)\n",
     "\n",
     "\n",
-    "        # -- TRAINING -- #\n",
-    "        import torch.optim as optim\n",
+    "        # -- TRAINING LOOP -- #\n",
+    "        for iii in range(5):\n",
     "\n",
-    "        # train the model\n",
-    "        model.train(\n",
-    "            optimizer= optim.Adam,\n",
-    "            optimizer_options={'lr': 0.05},\n",
-    "            num_epochs = 30,                \n",
-    "            batch_size = 32,\n",
-    "            stop_training_options = {\n",
-    "                'lookback_epochs': 5, \n",
-    "                'threshold': 0.005\n",
-    "            },\n",
-    "        )\n",
+    "            for block_n_layers in range(1, 21, 2):\n",
+    "                print(iii, \" # ------- block_n_layers: \", block_n_layers, \" ------- #\")\n",
+    "                print(\"\")\n",
+    "                print(\"\")\n",
     "\n",
-    "        # save string of the model\n",
-    "        model.save_str(\n",
-    "            metadata={\n",
-    "                \"data_file_path\": data_file_path,\n",
-    "                \"Quantum_circuit\": quantum_layer.__str__(),\n",
-    "            }\n",
-    "        )\n",
+    "                # -- QUANTUM NODE -- #\n",
     "\n",
-    "        # plot the losses of the trainig loop and save the figures\n",
-    "        model.plot_losses(save=True, save_txt=True)\n",
+    "                n_aminoacids = len(string_list[0])\n",
     "\n",
-    "        #save all the parameters of the model and the intermediate parameters of the model\n",
-    "        model.save_state_dict(intermediate=False)\n",
+    "                quantum_layer = qn.circuit(\n",
+    "                    n_qubits = n_aminoacids, \n",
+    "                    device = \"default.qubit.torch\",\n",
+    "                    device_options = {'shots': None},\n",
+    "                    embedding = qn.parts.AngleEmbedding, \n",
+    "                    # embedding_ansatz = qn.parts.Ansatz_11,\n",
+    "                    block_ansatz = qn.parts.Ansatz_11,\n",
+    "                    final_ansatz = qn.parts.Ansatz_final_11,\n",
+    "                    measurement = qn.parts.Measurement('Z', (n_aminoacids-1)//2),\n",
+    "                    # embedding_n_layers = 4,\n",
+    "                    # different_inputs_per_layer = True,\n",
+    "                    block_n_layers = block_n_layers,\n",
+    "                    # wrapper_qlayer = pw.QLayerEmpty,\n",
+    "                )\n",
     "\n",
-    "        # plot the validation and save it\n",
-    "        model.plot_validation(save=True, fig_size=(9,9), percentatge=1)\n",
+    "                # -- HYBRID MODEL -- #\n",
+    "                input_dim = input_data.size(1)\n",
     "\n",
-    "        # print validation and save it\n",
-    "        model.str_validation(save=True, precision=4, percentatge=1, printing=False)"
+    "                n_pre_classical_layers = 4\n",
+    "                layers_dim = np.linspace(n_aminoacids, input_dim, 4).astype(int)\n",
+    "\n",
+    "                import torch.nn as nn\n",
+    "                import torch\n",
+    "                    \n",
+    "                class Reshape(nn.Module):\n",
+    "                    def __init__(self):\n",
+    "                        super(Reshape, self).__init__()\n",
+    "\n",
+    "                    def forward(self, x):\n",
+    "                        dims = len(x.shape)\n",
+    "                        return torch.transpose(x, dims-2, dims-1).reshape(x.shape[-3] if dims==3 else 1, x.shape[-2]*x.shape[-1]).squeeze()\n",
+    "\n",
+    "                layers =  [ptm.nn.Embedding(num_embeddings=19, embedding_dim=quantum_layer.input_shape[0]//n_aminoacids), Reshape()]\n",
+    "                layers += [quantum_layer(), ptm.nn.Linear(1,1)]\n",
+    "\n",
+    "                # Create model and set data:\n",
+    "                model = ptm.pytorch_model(\n",
+    "                    layers,    \n",
+    "                    save_options = {'initial_path': initial_path, 'name_notebook': name_notebook},\n",
+    "                )\n",
+    "                model.set_data(\n",
+    "                    data_X=input_data, \n",
+    "                    data_Y=target_data, \n",
+    "                    data_X_validation=input_validation,\n",
+    "                    data_Y_validation=target_validation\n",
+    "                )\n",
+    "                model.keep_track_params=False\n",
+    "\n",
+    "\n",
+    "                # -- TRAINING -- #\n",
+    "                import torch.optim as optim\n",
+    "\n",
+    "                # train the model\n",
+    "                model.train(\n",
+    "                    optimizer= optim.Adam,\n",
+    "                    optimizer_options={'lr': 0.05},\n",
+    "                    num_epochs = 30,                \n",
+    "                    batch_size = 32,\n",
+    "                    stop_training_options = {\n",
+    "                        'lookback_epochs': 5, \n",
+    "                        'threshold': 0.005\n",
+    "                    },\n",
+    "                )\n",
+    "\n",
+    "                # save string of the model\n",
+    "                model.save_str(\n",
+    "                    metadata={\n",
+    "                        \"data_file_path\": data_file_path,\n",
+    "                        \"Quantum_circuit\": quantum_layer.__str__(),\n",
+    "                    }\n",
+    "                )\n",
+    "\n",
+    "                # plot the losses of the trainig loop and save the figures\n",
+    "                model.plot_losses(save=True, save_txt=True)\n",
+    "\n",
+    "                #save all the parameters of the model and the intermediate parameters of the model\n",
+    "                model.save_state_dict(intermediate=False)\n",
+    "\n",
+    "                # plot the validation and save it\n",
+    "                model.plot_validation(save=True, fig_size=(9,9), percentatge=1)\n",
+    "\n",
+    "                # print validation and save it\n",
+    "                model.str_validation(save=True, precision=4, percentatge=1, printing=False)"
    ]
   },
   {
@@ -760,18 +702,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
