--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +132,7 @@
      "output_type": "stream",
      "text": [
       "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 3 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
+      "Your branch is up to date with 'origin/main'.\n",
       "\n",
       "nothing to commit, working tree clean\n"
      ]
