--- a/Notebooks/generate_data.ipynb
+++ b/Notebooks/generate_data.ipynb
@@ -42,15 +42,21 @@
     "n_samples = 10000\n",
     "n_amino_acids = [4, 6, 8, 10, 12]\n",
     "only_single_energies = False\n",
+    "only_pair_energies   = True\n",
+    "\n",
+    "if only_single_energies: str_energies = '_Single'\n",
+    "elif only_pair_energies: str_energies = '_Pair'\n",
+    "else:                    str_energies = ''\n",
     "\n",
     "for n_aa in n_amino_acids:\n",
     "    f.generate_random_data_from_energies(\n",
     "        file_single_path     = initial_path+'data/Scores/PET/data/bb14/SingleEnergy.txt', \n",
     "        file_pair_path       = initial_path+'data/Scores/PET/data/bb14/PairwiseEnergy.txt', \n",
-    "        file_out_path        = initial_path+'data/Scores/PET/generated/bb14_Strings_Energies{}_{}_000_{}_aa.txt'.format('_Single' if only_single_energies else '', n_samples//1000, n_aa),\n",
+    "        file_out_path        = initial_path+'data/Scores/PET/generated/bb14_Strings_Energies{}_{}_000_{}_aa.txt'.format(str_energies, n_samples//1000, n_aa),\n",
     "        n_samples            = n_samples, \n",
     "        n_amino_acids        = n_aa,\n",
     "        only_single_energies = only_single_energies,\n",
+    "        only_pair_energies   = only_pair_energies\n",
     "    )"
    ]
   }
