--- a/Notebooks/loop_Xh_em_1qm_.ipynb
+++ b/Notebooks/loop_Xh_em_1qm_.ipynb
@@ -1562,6 +1562,11 @@
     "                    },\n",
     "                )\n",
     "\n",
+    "                # -- SAVE -- #\n",
+    "\n",
+    "                # dump the object\n",
+    "                model.dump()\n",
+    "\n",
     "                # save string of the model\n",
     "                model.save_str(\n",
     "                    metadata={\n",
