--- a/Notebooks/loop_Xh_em_1qm_8-10.ipynb
+++ b/Notebooks/loop_Xh_em_1qm_8-10.ipynb
@@ -1454,7 +1454,8 @@
     }
    ],
    "source": [
-    "for num in [4, 6, 8, 10, 12]:\n",
+    "# for num in [4, 6, 8, 10, 12]:\n",
+    "for num in [8, 10]:\n",
     "    print(\"## --- Num: \", num, \" --- ##\")\n",
     "    print(\"\")\n",
     "    print(\"\")\n",
@@ -1464,7 +1465,7 @@
     "        # -- DATA -- #\n",
     "\n",
     "        # name of the notebook\n",
-    "        day = \"0831\"\n",
+    "        day = \"0901\"\n",
     "        name_notebook = \"{}-{}h_em_1qm{}.ipynb\".format(day, num, type_energy)\n",
     "        # save the name of the notebook\n",
     "        with open('{}_notebooks_names.txt'.format(day), 'a') as file:\n",
@@ -1553,12 +1554,13 @@
     "                # train the model\n",
     "                model.train(\n",
     "                    optimizer= optim.Adam,\n",
-    "                    optimizer_options={'lr': 0.05},\n",
+    "                    optimizer_options={'lr': 0.01},\n",
     "                    num_epochs = 30,                \n",
     "                    batch_size = 32,\n",
     "                    stop_training_options = {\n",
     "                        'lookback_epochs': 5, \n",
-    "                        'threshold': 0.005\n",
+    "                        'threshold_slope': 0.005,\n",
+    "                        'threshold_std_dev': 0.2\n",
     "                    },\n",
     "                )\n",
     "\n",
