--- a/Notebooks/loop_Xh_em_1qm.ipynb
+++ b/Notebooks/loop_Xh_em_1qm.ipynb
@@ -465,8 +465,7 @@
     }
    ],
    "source": [
-    "# for num in [4, 6, 8, 10, 12]:\n",
-    "for num in [4, 6]:\n",
+    "for num in [4, 6, 8, 10, 12]:\n",
     "    print(\"## --- Num: \", num, \" --- ##\")\n",
     "    print(\"\")\n",
     "    print(\"\")\n",
@@ -625,18 +624,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
