--- a/Notebooks/tests.ipynb
+++ b/Notebooks/tests.ipynb
@@ -191,13 +191,62 @@
     "print(a == b)\n",
     "print(type(b))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10, 55), (55, 100), (100, 50), (50, 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "input_dim = 10\n",
+    "block_n_layers = 3\n",
+    "n_neurons = []\n",
+    "layers_dim = np.linspace(input_dim, input_dim**2, block_n_layers).astype(int)\n",
+    "for n in zip(layers_dim[:-1], layers_dim[1:]): n_neurons.append(n)\n",
+    "layers_dim = np.linspace(input_dim**2, 1, block_n_layers).astype(int)\n",
+    "for n in zip(layers_dim[:-1], layers_dim[1:]): n_neurons.append(n)\n",
+    "\n",
+    "print(n_neurons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2, 'c': 3, 'd': 4}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {'a': 1, 'b': 2}\n",
+    "b = {**a, 'c': 3, 'd': 4}\n",
+    "\n",
+    "b"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PennyLane",
+   "display_name": "JL_Pennylane",
    "language": "python",
-   "name": "python3"
+   "name": "jl_pennylane"
   },
   "language_info": {
    "codemirror_mode": {
@@ -209,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
