--- a/Notebooks/tests.ipynb
+++ b/Notebooks/tests.ipynb
@@ -319,17 +319,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0908'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now().strftime(\"%m%d\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import zipfile, os\n",
+    "\n",
+    "def zip_folder(folder_path, zip_filename):\n",
+    "    with zipfile.ZipFile(zip_filename, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
+    "        for root, dirs, files in os.walk(folder_path):\n",
+    "            for file in files:\n",
+    "                file_path = os.path.join(root, file)\n",
+    "                arcname = os.path.relpath(file_path, folder_path)\n",
+    "                zipf.write(file_path, arcname)\n",
+    "\n",
+    "# Example usage\n",
+    "folder_to_zip = './peptide-QML/checkpoints/'\n",
+    "zip_filename = 'output.zip'\n",
+    "zip_folder(folder_to_zip, zip_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1,2,3,4,5,6,7,8,9,10]\n",
+    "x.append(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.append([12,13,14,15,16,17,18,19,20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = dict(iter({\n",
+    "    'a': 1,\n",
+    "    'b': 2,\n",
+    "}.items()))\n",
+    "x"
+   ]
   }
  ],
  "metadata": {
